Configuring the oauth2 authentication providader

--- a/atrs-view/src/src/app/atrs/security/login/login.tmpl.html
+++ b/atrs-view/src/src/app/atrs/security/login/login.tmpl.html
@@ -46,8 +46,8 @@
 							<md-button ng-click="loginController.authenticate('linkedin')" class="md-icon-button" ng-style="{ 'background-color': '#337ab7' }" >
                             	<md-icon md-font-icon="fa fa-linkedin"></md-icon>
                             </md-button>
-							<md-button ng-click="loginController.authenticate('twitter')" class="md-icon-button"  ng-style="{ 'background-color': '#5bc0de' }" >
-                            	<md-icon md-font-icon="fa fa-twitter"></md-icon>
+							<md-button href="/rest/login/github" class="md-icon-button"  ng-style="{ 'background-color': '#5bc0de' }" >
+                            	<md-icon md-font-icon="fa fa-github"></md-icon>
                             </md-button>
                         </div>
                     </div>
